--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,12 @@
 /Output
 /All_Data_Long_ID.rds
 /ID_Table_Full.rds
+Mammals
+Mammals_1km_AOH.zip
+/All_Data_Long_ID2.rds
+/ForK.rds
+/Bird_Rich_Temp.rds
+/Mammal_Rich_Temp.rds
+All_Data_Long_ID2.csv
+Birds
+Birds_AOH_10km.zip
