--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ Birds_AOH_10km.zip
 Diversity
 /Richness_Birds.rds
 Mammals_AOH_10km.zip
+/Imputed.rds
+/Richness_Mammals.rds
+/Scenario_ID.rds
+/All_Rich_Temp.rds
