--- a/Defor_Data/ppdcam_0dol/.gitignore
+++ b/Defor_Data/ppdcam_0dol/.gitignore
@@ -1,3 +1,4 @@
 /ppdcam_0dol_forest_latinamerica.csv
 /ppdcam_0dol_forest_africa.csv
 /ppdcam_0dol_forest_asia.csv
+/ppdcam_discont_0dol_forest_latinamerica.csv
