--- a/Defor_Data/ppdcam_flat5000d/.gitignore
+++ b/Defor_Data/ppdcam_flat5000d/.gitignore
@@ -1,3 +1,4 @@
 /ppdcam_flat_5000dol_forest_africa.csv
 /ppdcam_flat_5000dol_forest_asia.csv
 /ppdcam_flat_5000dol_forest_latinamerica.csv
+/ppdcam_discont_flat_5000dol_forest_latinamerica.csv
